--- a/config.toml
+++ b/config.toml
@@ -374,9 +374,9 @@ theme = "loveit"
         enable = false
       #  Utterances 评论系统设置
       [params.page.comment.utterances]
-        enable = false
+        enable = true
         # owner/repo
-        repo = ""
+        repo = "AlexWuYh/hugoblogtalks"
         issueTerm = "pathname"
         label = ""
         lightTheme = "github-light"
