--- a/config.toml
+++ b/config.toml
@@ -135,7 +135,7 @@ theme = "loveit"
       # 主页显示头像的 URL
       #avatarURL = "images/avatar.png"
       #avatarURL = "https://qiniu.oneone.life/img/avatar.png"
-      avatarURL = "https://qiniu.oneone.life/img/avatar02.png"
+      avatarURL = "https://cdn.jsdelivr.net/gh/alexwuyh/pic-host@master/photo/202211011705754.png"
       #  主页显示的网站标题 (支持 HTML 格式)
       title = "易娃的杂货铺"
       # 主页显示的网站副标题
@@ -159,7 +159,7 @@ theme = "loveit"
   [params.social]
     GitHub = "AlexWuYh"
     Linkedin = ""
-    Twitter = "Alex_WuYh"
+    Twitter = ""
     Instagram = "alex_wuyh"
     Facebook = ""
     Telegram = ""
@@ -501,7 +501,7 @@ theme = "loveit"
 [author]
   name = "Alex Wu"
   email = "alex.wuyinghao@gmail.com"
-  link = ""
+  link = "https://www.yuque.com/wuyiwa"
 
 # 网站地图配置
 [sitemap]
