--- a/config.toml
+++ b/config.toml
@@ -135,7 +135,8 @@ theme = "loveit"
       # 主页显示头像的 URL
       #avatarURL = "images/avatar.png"
       #avatarURL = "https://qiniu.oneone.life/img/avatar.png"
-      avatarURL = "https://cdn.jsdelivr.net/gh/alexwuyh/pic-host@master/photo/202211011705754.png"
+      #avatarURL = "https://cdn.jsdelivr.net/gh/alexwuyh/pic-host@master/photo/202211011705754.png"
+      avatarURL = "https://imgup.oneone.life/app/hide.php?key=R2M2UHVFbUU1Uzc3cGN3OE9ObXRlUEx5SjdlWS9uOWowY2M9"
       #  主页显示的网站标题 (支持 HTML 格式)
       title = "易娃的杂货铺"
       # 主页显示的网站副标题
