--- a/config.toml
+++ b/config.toml
@@ -149,9 +149,9 @@ theme = "loveit"
       disclaimer = ""
     # 主页文章列表
     [params.home.posts]
-      enable = true
+      enable = false
       # 主页每页显示文章数量
-      paginate = 6
+      paginate = 10
       #  被 params.page 中的 hiddenFromHomePage 替代
       # 当你没有在文章前置参数中设置 "hiddenFromHomePage" 时的默认行为
       defaultHiddenFromHomePage = false
@@ -566,6 +566,14 @@ theme = "loveit"
     name = "标签"
     url = "/tags/"
     title = ""
+    weight = 3
+  [[menu.main]]
+    identifier = "photo"
+    pre = ""
+    post = ""
+    name = "摄影"
+    url = "/photo/"
+    title = ""
     weight = 2
   [[menu.main]]
     identifier = "categories"
@@ -574,7 +582,7 @@ theme = "loveit"
     name = "分类"
     url = "/categories/"
     title = ""
-    weight = 3
+    weight = 4
 
 # Hugo 解析文档的配置
 
