--- a/config.toml
+++ b/config.toml
@@ -71,7 +71,7 @@ theme = "loveit"
   # 页面头部导航栏配置
   [params.header]
     # 桌面端导航栏模式 ("fixed", "normal", "auto")
-    desktopMode = "fixed"
+    desktopMode = "auto"
     # 移动端导航栏模式 ("fixed", "normal", "auto")
     mobileMode = "auto"
     #  页面头部导航栏标题配置
@@ -141,7 +141,7 @@ theme = "loveit"
       #  主页显示的网站标题 (支持 HTML 格式)
       title = "易娃的杂货铺"
       # 主页显示的网站副标题
-      subtitle = "记录笔记、摄影、生活"
+      subtitle = "记录笔记、摄影、生活 | wuewa.cn"
       # 是否为副标题显示打字机动画
       typeit = true
       # 是否显示社交账号
@@ -150,9 +150,9 @@ theme = "loveit"
       disclaimer = ""
     # 主页文章列表
     [params.home.posts]
-      enable = false
+      enable = true
       # 主页每页显示文章数量
-      paginate = 10
+      paginate = 5
       #  被 params.page 中的 hiddenFromHomePage 替代
       # 当你没有在文章前置参数中设置 "hiddenFromHomePage" 时的默认行为
       defaultHiddenFromHomePage = false
@@ -428,7 +428,7 @@ theme = "loveit"
   #  网站 SEO 配置
   [params.seo]
     # 图片 URL
-    image = ""
+    image = "logo.png"
     # 缩略图 URL
     thumbnailUrl = ""
 
@@ -504,7 +504,7 @@ theme = "loveit"
 [author]
   name = "Alex Wu"
   email = "alex.wuyinghao@gmail.com"
-  link = "https://www.yuque.com/wuyiwa"
+  link = "https://wuewa.cn"
 
 # 网站地图配置
 [sitemap]
