--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://oneone.life"
+baseURL = "https://blog.oneone.life"
 # [en, zh-cn, fr, ...] 设置默认的语言
 defaultContentLanguage = "zh-cn"
 # 网站语言, 仅在这里 CN 大写
@@ -152,7 +152,7 @@ theme = "loveit"
     [params.home.posts]
       enable = true
       # 主页每页显示文章数量
-      paginate = 5
+      paginate = 10
       #  被 params.page 中的 hiddenFromHomePage 替代
       # 当你没有在文章前置参数中设置 "hiddenFromHomePage" 时的默认行为
       defaultHiddenFromHomePage = false
